<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ruta Tolima</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mapas">Mapa</string>
    <string name="txta">ESTACION DE SERVICIO</string>
    <string name="txtb">PEAJE</string>
    <string name="txtc">SERVICIO AUTOMOTRIZ</string>
    <string name="txtd">ZONA DE DERUMBE</string>
    <string name="txte">ZONA DE ALTA ACCIDENTABILIDAD</string>
    <string name="btnlogin">Acceder</string>
    <string name="bntregistro">Registrarse</string>
    <string name="txtaa">ESTACION</string>
    <string name="txtab">DE SERVICIO</string>
    <string name="txtca">SERVICIO</string>
    <string name="txtda">ZONA</string>
    <string name="txtdb">DE DERUMBE</string>
    <string name="txtcb">AUTOMOTRIZ</string>
    <string name="txtea">ZONA DE ALTA</string>
    <string name="txteb">ACCIDENTABILIDAD</string>
	<string name="txtla">USUARIO</string>
	<string name="txtlb">CONTRASEÑA</string>
	<string name="txtlc">OLVIDE MI CONTRASEÑA</string>
	<string name="txtld">INICIAR</string>
	<string name="subject">harn.16@gmail.com</string>
	<string name="comp">Compartir</string>
</resources>
